Fix overflowing second template row on Layout

--- a/src/styles/App.module.css
+++ b/src/styles/App.module.css
@@ -47,7 +47,7 @@ aside {
   /* height: fit-content; */
   display: grid;
   grid-template-columns: 1fr 2fr;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: auto auto;
   grid-template-areas:
     "header header"
     "sidebar career";
